Fix background pb

--- a/elm-datepicker.css
+++ b/elm-datepicker.css
@@ -5,6 +5,7 @@
   outline: 0; }
 
 .elm-datepicker--picker {
+  background-color: white;
   position: absolute;
   border: 1px solid #CCC;
   z-index: 10; }
